--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                         <header className="flex justify-between items-center py-6">
                             <a href="./index.html"><h1 className="text-2xl font-bold">DISHANI SEN</h1></a>
                             <nav className="flex items-center">
-                                <a href="./blog.html" className={`${darkMode ? 'text-white' : 'text-gray-900'} px-4`}>About</a>
-                                <a href="./about.html" className={`${darkMode ? 'text-white' : 'text-gray-900'} px-4`}>Blog</a>
+                                <a href="./about.html" className={`${darkMode ? 'text-white' : 'text-gray-900'} px-4`}>About</a>
+                                <a href="./blog.html" className={`${darkMode ? 'text-white' : 'text-gray-900'} px-4`}>Blog</a>
                                 <a href="./resume.pdf" className={`${darkMode ? 'text-white' : 'text-gray-900'} px-4`} target="_blank">Resume</a>
                                 <button onClick={toggleDarkMode} className="ml-4">
                                     <i className={`fas ${darkMode ? 'fa-sun' : 'fa-moon'}`}></i>
